--- a/front_end/package.json
+++ b/front_end/package.json
@@ -24,8 +24,6 @@
     ]
   },
   "dependencies": {
-    "@emotion/core": "10.0.9",
-    "@emotion/styled": "10.0.9",
     "@reduxjs/toolkit": "^1.9.7",
     "abort-controller": "^3.0.0",
     "axios": "^0.21.1",
@@ -39,37 +37,36 @@
     "react-dom": "^16.13.1",
     "react-i18next": "^11.8.5",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^4.0.3",
+    "react-router-dom": "^6.22.0",
+    "react-scripts": "^5.0.1",
     "reactstrap": "^8.4.1",
     "realm-web": "^2.0.0",
-    "render-if": "0.1.1",
     "webpack": "4.44.2"
   },
   "devDependencies": {
-    "@babel/core": "7.8.4",
+    "@babel/core": "^7.23.9",
+    "@babel/eslint-parser": "^7.23.10",
     "@babel/node": "7.8.4",
     "@babel/plugin-proposal-class-properties": "7.8.3",
     "@babel/plugin-proposal-decorators": "7.8.3",
     "@babel/plugin-proposal-optional-chaining": "7.9.0",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/plugin-transform-runtime": "7.9.0",
-    "@babel/preset-env": "7.9.0",
-    "@babel/preset-flow": "7.9.0",
-    "@babel/preset-react": "7.9.0",
+    "@babel/preset-env": "7.23.9",
     "autoprefixer": "9.0.2",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.0",
     "babel-plugin-dev-expression": "^0.2.2",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-jsx-control-statements": "^4.0.0",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-react-css-modules": "^5.2.6",
     "css-loader": "^1.0.0",
-    "eslint": "^7.32.0",
+    "customize-cra": "^1.0.0",
+    "eslint": "^8.56.0",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
+    "react-app-rewired": "^2.2.1",
     "sass": "^1.50.1",
     "style-loader": "^0.23.0",
     "webpack-cli": "^4.2.0",
@@ -77,7 +74,7 @@
   },
   "resolutions": {
     "//": "See https://github.com/facebook/create-react-app/issues/11773",
-    "react-error-overlay": "6.0.9"
+    "react-error-overlay": "6.0.11"
   },
   "homepage": "https://marketzhupani.herokuapp.com/"
 }
